<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlockNote</string>
    <string name="hello_world">Nouvelle fenetre :D !</string>
    <string name="action_settings">Configuration</string>
    <string name="action_refresh_data">Mise a jour</string>
    <string name="action_about_us">A Propos</string>
    <string name="corbeille">Corbeille</string>
    <!-- ================== login - register ================== -->
    <string name="label_mail">Mail</string>
    <string name="label_password">Mot de passe</string>
    <string name="button_connexion">• Connexion</string>
    <string name="label_retype">re-type</string>
    <string name="button_register">Inscription</string>
    <string name="label_pseudo">pseudo</string>
    <string name="btn_register_submit">• Inscription</string>
    <string name="btn_register_back">• Retour</string>
    <string name="btn_register_submit_connection">• Inscription</string>

    <!-- ================== note detail ================== -->
    <string name="label_Titre">Titre</string>
    <string name="Date">Date</string>
    <string name="btn_delete_note">Supprimer</string>
    <string name="btn_back">Retour</string>
    <string name="btn_modif_note">Modifier</string>
    <string name="important">importance</string>

    <!-- ================== mon compte ================== -->
    <string name="btn_mycompte_pseud">• Changer de pseudo</string>
    <string name="btn_mycompte_mdp">• Changer votre mot de passe</string>
    <string name="btn_mycompte_desinscription">• Desinscription</string>
    <string name="btn_mycompte_return">• Retour</string>

    <!-- ================== Autres ================== -->

    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_section1">Accueil</string>
    <string name="title_section2">Carnet</string>
    <string name="title_section3">Mon compte</string>
    <string name="title_section4">Deconnexion</string>

    <!-- ================== ecrire note ================== -->
    <string name="button_note">Ecrire</string>
    <string name="titre_note">Titre</string>
    <string name="radioButton1">Important ?</string>
    <string name="contenu_note">Contenu</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Accueil</item>
        <item>Carnet</item>
        <item>Mon compte</item>
        <item>Deconnexion</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home2</item>
        <item>@drawable/address</item>
        <item>@drawable/user</item>
        <item>@drawable/logouticon</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="title_activity_note_detail">NoteDetail</string>
    <string name="title_activity_activity_note">ActivityNote</string>
    <string name="title_activity_ecrire_note">EcrireNote</string>
    <string name="title_activity_activity_note_liste">ActivityNoteListe</string>
    <string name="title_activity_lined_edit_text">LinedEditText</string>

    
    <!-- Accueil Fragment -->
    <string name="checkie">Erreur : vérifier la connexion internet !</string>
    <string name="load">chargement en cours</string>
    <string name="maj">Mise a jour effectué</string>
    <string name="maj2">Mise a jour</string>
    
    <!-- Activity Inscription -->
    <string name="ins">inscription en cours</string>
    <string name="entreMDP">Veuillez entrez un mot de passe.</string>
    <string name="entreemail">Veuillez entrez une adresse email valide.</string>
    <string name="entreemai">Veuillez entre votre email.</string>
    <string name="entrepseu">Veuillez entrez votre pseudo.</string>
    <string name="successins">Inscription réussi, veuillez vous connecter !</string>
    
    <!-- ActivityNoteListe -->
    <string name="Note_Delete">Supprimer</string>
    <string name="Note_title">Changer  le titre</string>
    <string name="ChangeCon">Changer le contenu</string>
    <string name="ChangeTiNo">Changer le titre de la note</string>
    <string name="ChangeANL">Changer</string>
     <string name="ChangeANUL">Annuler</string>
    <string name="ChangeCN">Changer le contenu de la note</string>
     <string name="AddNote">+ Ajouter une note</string>
     <string name="DeleteSu">suppression effectué</string>
     
     <!-- ActivityNote -->
     <string name="AddCarnet">+ Ajouter un carnet [</string>
     
     <!-- ActivityPrincipale -->
     <string name="apropos">Sujet:\n\nBloc-notes avec sauvegarde en ligne des différents articles. Prévoir la notion de catégorie et de titre.\n\nDeveloppeur:\n\n- anthony.lattuca@condorcet.be\n- alexandre.rosati@condorcet.be</string>
     <string name="ok">OK</string>
     <string name="logout">Déconnexion réussis !</string>
     <string name="erreurAP">Une erreur inattendue est survenue !</string>
     <string name="synchro">Synchronisation réussis</string>
     
     <!-- CarnetFragment -->
     <string name="NomC">Nom du carnet</string>
     <string name="Carnet">Carnet : </string>
     <string name="NewCarn">Veuillez entrer le nouveau nom du carnet :</string>
     <string name="AddC">Ajouter</string>
     <string name="ChangeTC">Changer le titre</string>
     <string name="actionC">Action : </string>
     <string name="Changetdc">Changer le titre du carnet</string>
     <string name="ChampsV">Champ vide !</string>
     <string name="DeleteOk">suppression effectué</string>
     <string name="carnetMaj">Le carnet a bien été mis a jour</string>
     
     
     <!-- EcrireNote -->
     <string name="insertN">insertion de votre note réussis</string>
     <string name="Prob">Problème</string>
     <string name="insertT">Veuillez entrez un titre</string>
     <string name="insertC">Veuillez entrez un contenu</string>
     
     <!-- MainActivity -->
     <string name="LMinco">Login et Mot de passe incorrecte !</string>
     <string name="Minco">Veuillez entrez votre mot de passe.</string>
     <string name="Linco">Veuillez entre votre email.</string>
     
     <!-- MonCompteFragment -->
     <string name="pseudo">Pseudo</string>
     <string name="Npseudo">Nouveau Pseudo</string>
     <string name="VNpseudo">Veuillez entrer le nouveau pseudo</string>
     <string name="mdp">mot de passe</string>
     <string name="Nmdp">Nouveau mot de passe</string>
     <string name="Vmdp">Vérification du mot de passe</string>
     <string name="VNmdp">Veuillez entrer le nouveau mot de passe</string>
     <string name="VANmdp">Veuillez entrer à nouveau le mot de passe</string>
     <string name="desin">Se desinscrire</string>
     <string name="desinV">Voulez-vous vraiment vous désinscrire?</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
     <string name="pseudoV">Erreur : pseudo vide !</string>
     <string name="mdpI">Mot de passe incohérent</string>
     <string name="mdpN">vous n avez écrit aucun mot de passe</string>
     <string name="DE">Desinscription effectué</string>
     
     <!-- NoteDetail -->
     <string name="contenu">Contenu</string>
     <string name="Ccontenu">Changer le contenu de la note</string>
     <string name="NoteS">Note supprimé</string>
     
     
     
</resources>
