<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#333f4f" >

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="0dip" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/label_mail"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_marginTop="10dip"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/label_password"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_marginTop="20dip"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dip"
        android:background="#019875"
        android:text="@string/button_connexion"
        android:textColor="#fff" />
	
    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:background="#019875"
        android:text="@string/btn_register_submit_connection"
        android:textColor="#fff" />

</LinearLayout>
